--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Octavian's Website</title>
+  <title>Octavian's CV</title>
 </head>
 
 <body>
   <table cellspacing="20px">
     <tr>
+      <td>Galma Octavian-Andrei</td>
       <td><img src="https://lh3.googleusercontent.com/a-/AOh14Gj6yUWLLWLWypAog3InaliDTCxLAbQd3_nfXDC4lA=s96-c-rg-br100" alt="Poza Octavian"></td>
       <td>
         <em>Head of Digital and Sales Agent</< /em> for <strong><em>Bio Cover Decor</em></strong>
