--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
   <table cellspacing="20px">
     <tr>
-      <td>Galma Octavian-Andrei</td>
       <td><img src="https://lh3.googleusercontent.com/a-/AOh14Gj6yUWLLWLWypAog3InaliDTCxLAbQd3_nfXDC4lA=s96-c-rg-br100" alt="Poza Octavian"></td>
       <td>
+        <td><strong><em>Galma Octavian-Andrei</strong></em></td>
         <em>Head of Digital and Sales Agent</< /em> for <strong><em>Bio Cover Decor</em></strong>
           <br>
           <strong><a href="Contact Details.html">Contact Details</a></strong>
